<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- TODO: Make sure placeholder is blank for release -->
    <string name="placeholder">Text</string>
    <string name="app_name">RemMe</string>
    <string name="changegroups">Contact Groups</string>
    <string name="groups">Groups</string>
    <string name="viewcontacts">View Contacts</string>
    <string name="loading">Loading</string>
    <string name="addphoto">Add Photo</string>
    <string name="capturephoto">Take image</string>
    <string name="processing">Processing&#8230;</string>
    <string name="selectMode">Select a mode</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="back">Leave game</string>
    <string name="game_summary">Game Summary</string>
    <string name="summary_bad_contacts">Mistakes</string>
    <string name="photo_description">This contact\'s photo</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="dataErrorDescription">If something\'s not quite right with this question, select the incorrect detail below.</string>
    <string name="data_error_confirm">What would you like to do with this contact detail?</string>
    <string name="hide_contact">Hide this contact</string>
    <string name="delete_detail">Delete detail</string>
    <string name="hide_detail">Hide detail (only within RemMe)</string>
    <string name="edit_contact">Edit / Delete Contact</string>
    <string name="cancel">Cancel</string>
    <string name="more">More</string>
    <string name="contact_hidden">Contact hidden</string>
    <string name="pause">Pause</string>
    <string name="data_error">Error in Question</string>
    <string name="guess_correct_count">Correct: %d</string>
    <string name="guess_incorrect_count">Incorrect: %d</string>
    <string name="guess_discard_count">Discarded: %d</string>
    <string name="you_scored">You scored:</string>
    <string name="trueText">True</string>
    <string name="falseText">False</string>
    <string name="sortByScore">Sort by Score</string>
    <string name="sortByName">Sort by Name</string>
    <string name="changeSortDirection">Change direction</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_difficulty_list">Modes</string>
    <string name="title_difficulty_detail">Difficulty Detail</string>
    <string name="chooseDifficulty">Choose a Difficulty:</string>

    <string name="askPersonal">General topics</string>
    <string name="askCorporate">Corporate topics</string>
    <string name="askGroups">Group-based topics</string>

    <string name="dialog_choose_groups">Choose groups</string>
    <string name="icon">Icon</string>

</resources>
