<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_error_confirm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <FrameLayout
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/delete_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_detail" />

        <Button
            android:id="@+id/hide_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hide_detail" />

        <Button
            android:id="@+id/edit_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_contact" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
