<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <uk.digitalsquid.remme.ingame.views.AsyncImageView
        android:id="@+id/photo"
        android:background="#FF9933"
        android:contentDescription="@string/contentDescription_contactphoto"
        android:layout_margin="10dip"
        android:layout_width="75dp"
        android:layout_height="75dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dip"
        android:layout_marginRight="7dip"
        android:layout_marginTop="7dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical">
		        <TextView
		            android:id="@+id/guess_correct_count"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/guess_correct_count"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
	
		        <TextView
		            android:id="@+id/guess_discard_count"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/guess_discard_count"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
	
		        <TextView
		            android:id="@+id/guess_incorrect_count"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/guess_incorrect_count"
		            android:textAppearance="?android:attr/textAppearanceSmall" />
		
	        </LinearLayout>

	        <Space
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="match_parent" />

	        <uk.digitalsquid.remme.ingame.views.StatsBarView
	            android:id="@+id/statsBarView"
	            android:layout_width="60dp"
	            android:layout_height="match_parent"
	            android:layout_weight="0.10" />
	
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
